Resolved merge conflicts

--- a/Capstone P1(Resume)/index.html
+++ b/Capstone P1(Resume)/index.html
@@ -33,7 +33,7 @@
     <h2>Education</h2>
     <ul>
       <li>
-        Bachelor of Computer Application - Hemcahnd Yadav University(2022-2025)
+        Bachelor of Computer Application - Hemchand Yadav University(2022-2025)
       </li>
     </ul>
     <hr />
