--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -10,7 +10,7 @@
 <body>
    
     <div class="calculator">
-        <input type="number"> <br>
+        <input type="number" id="input"> <br>
         <button>C
 
         </button>
