--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -10,27 +10,27 @@
 <body>
    
     <div class="calculator">
-        <input type="number" id="input"> <br>
+        <input type="number" id="input" onclick="display()"> <br>
         <button>C
 
         </button>
         <button>()</button>
         <button>%</button>
         <button>/</button> <br>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
+        <button class = "num-btn">7</button>
+        <button class = "num-btn">8</button>
+        <button class = "num-btn">9</button>
         <button>x</button> <br>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
+        <button class = "num-btn">4</button>
+        <button class = "num-btn">5</button>
+        <button class = "num-btn">6</button>
         <button>-</button> <br>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
+        <button class = "num-btn">1</button>
+        <button class = "num-btn">2</button>
+        <button class = "num-btn">3</button>
         <button>+</button> <br>
         <button>+/-</button>
-        <button>0</button>
+        <button class = "num-btn">0</button>
         <button>.</button>
         <button>=</button>
 
