--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -10,29 +10,39 @@
 <body>
    
     <div class="calculator">
-        <input type="number" id="input" onclick="display()"> <br>
-        <button>C
-
-        </button>
-        <button>()</button>
-        <button>%</button>
-        <button>/</button> <br>
-        <button class = "num-btn">7</button>
-        <button class = "num-btn">8</button>
-        <button class = "num-btn">9</button>
-        <button>x</button> <br>
-        <button class = "num-btn">4</button>
-        <button class = "num-btn">5</button>
-        <button class = "num-btn">6</button>
-        <button>-</button> <br>
-        <button class = "num-btn">1</button>
-        <button class = "num-btn">2</button>
-        <button class = "num-btn">3</button>
-        <button>+</button> <br>
-        <button>+/-</button>
-        <button class = "num-btn">0</button>
-        <button>.</button>
-        <button>=</button>
+        <input type="number" id="input" onclick="display()">
+        <div>
+            <button onclick="display()">+</button>
+            <button onclick="display()">7</button>
+            <button>8</button>
+            <button>9</button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+        </div>
 
        
         
