--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -14,12 +14,12 @@
         <div>
             <button onclick="display()">+</button>
             <button onclick="display()">7</button>
-            <button>8</button>
-            <button>9</button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
+            <button onclick="display()">8</button>
+            <button onclick="display()">9</button>
+            <button onclick="display()">-</button>
+            <button onclick="display()">4</button>
+            <button>5</button>
+            <button>6</button>
             <button></button>
             <button></button>
             <button></button>
