--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -18,12 +18,12 @@
             <button onclick="display()">9</button>
             <button onclick="display()">-</button>
             <button onclick="display()">4</button>
-            <button>5</button>
-            <button>6</button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
+            <button onclick="display()">5</button>
+            <button onclick="display()">6</button>
+            <button onclick="display()">*</button>
+            <button onclick="display()">1</button>
+            <button>2</button>
+            <button>3</button>
             <button></button>
             <button></button>
             <button></button>
