--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -22,8 +22,8 @@
             <button onclick="display()">6</button>
             <button onclick="display()">*</button>
             <button onclick="display()">1</button>
-            <button>2</button>
-            <button>3</button>
+            <button onclick="display()">2</button>
+            <button onclick="display()">3</button>
             <button></button>
             <button></button>
             <button></button>
