--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -24,8 +24,8 @@
             <button onclick="display()">1</button>
             <button onclick="display()">2</button>
             <button onclick="display()">3</button>
-            <button></button>
-            <button></button>
+            <button onclick="display()">/</button>
+            <button onclick="display()">0</button>
             <button></button>
             <button></button>
             <button></button>
