--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -10,7 +10,7 @@
 <body>
    
     <div class="calculator">
-        <input type="number" id="input" onclick="display()">
+        <input type="number" id="input" onclick="display()" readonly>
         <div>
             <button onclick="display()">+</button>
             <button onclick="display()">7</button>
