--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -26,8 +26,8 @@
             <button onclick="display()">3</button>
             <button onclick="display()">/</button>
             <button onclick="display()">0</button>
-            <button></button>
-            <button></button>
+            <button onclick="display()">.</button>
+            <button onclick="display()">=</button>
             <button></button>
             <button></button>
             <button></button>
