--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -27,8 +27,8 @@
             <button onclick="display()">/</button>
             <button onclick="display()">0</button>
             <button onclick="display()">.</button>
-            <button onclick="display()">=</button>
-            <button></button>
+            <button onclick="calculate()">=</button>
+            <button onclick="clear()">C</button>
             <button></button>
             <button></button>
             <button></button>
