--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -11,7 +11,7 @@
    
     <div class="calculator">
         <input type="number" id="input" onclick="display()" readonly>
-        <div>
+        <div id="keys">
             <button onclick="display()">+</button>
             <button onclick="display()">7</button>
             <button onclick="display()">8</button>
