--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -10,23 +10,23 @@
 <body>
    
     <div class="calculator">
-        <input type="number" id="input" onclick="display()" readonly>
+        <input type="number" id="input" readonly>
         <div id="keys">
-            <button onclick="display()">+</button>
-            <button onclick="display()">7</button>
-            <button onclick="display()">8</button>
-            <button onclick="display()">9</button>
-            <button onclick="display()">-</button>
-            <button onclick="display()">4</button>
-            <button onclick="display()">5</button>
-            <button onclick="display()">6</button>
-            <button onclick="display()">*</button>
-            <button onclick="display()">1</button>
-            <button onclick="display()">2</button>
-            <button onclick="display()">3</button>
-            <button onclick="display()">/</button>
-            <button onclick="display()">0</button>
-            <button onclick="display()">.</button>
+            <button onclick="display('+')">+</button>
+            <button onclick="display('7')">7</button>
+            <button onclick="display('8')">8</button>
+            <button onclick="display('9')">9</button>
+            <button onclick="display('-')">-</button>
+            <button onclick="display('4')">4</button>
+            <button onclick="display('5')">5</button>
+            <button onclick="display('6')">6</button>
+            <button onclick="display('*')">*</button>
+            <button onclick="display('1')">1</button>
+            <button onclick="display('2')">2</button>
+            <button onclick="display('3')">3</button>
+            <button onclick="display('/')">/</button>
+            <button onclick="display('0')">0</button>
+            <button onclick="display('.')">.</button>
             <button onclick="calculate()">=</button>
             <button onclick="clear()">C</button>
         </div>
