--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -5,28 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    
 </head>
 <body>
    
     <div class="calculator">
-        <input type="number" id="input" readonly>
+        <input type="number" id="display" readonly>
         <div id="keys">
-            <button onclick="display('+')">+</button>
-            <button onclick="display('7')">7</button>
-            <button onclick="display('8')">8</button>
-            <button onclick="display('9')">9</button>
-            <button onclick="display('-')">-</button>
-            <button onclick="display('4')">4</button>
-            <button onclick="display('5')">5</button>
-            <button onclick="display('6')">6</button>
-            <button onclick="display('*')">*</button>
-            <button onclick="display('1')">1</button>
-            <button onclick="display('2')">2</button>
-            <button onclick="display('3')">3</button>
-            <button onclick="display('/')">/</button>
-            <button onclick="display('0')">0</button>
-            <button onclick="display('.')">.</button>
+            <button onclick="Display('+')">+</button>
+            <button onclick="Display('7')">7</button>
+            <button onclick="Display('8')">8</button>
+            <button onclick="Display('9')">9</button>
+            <button onclick="Display('-')">-</button>
+            <button onclick="Display('4')">4</button>
+            <button onclick="Display('5')">5</button>
+            <button onclick="Display('6')">6</button>
+            <button onclick="Display('*')">*</button>
+            <button onclick="Display('1')">1</button>
+            <button onclick="Display('2')">2</button>
+            <button onclick="Display('3')">3</button>
+            <button onclick="Display('/')">/</button>
+            <button onclick="Display('0')">0</button>
+            <button onclick="Display('.')">.</button>
             <button onclick="calculate()">=</button>
             <button onclick="clear()">C</button>
         </div>
@@ -35,7 +35,8 @@
         
 
     </div>
-   
+
+    <script src="script.js"></script>
    
 </body>
 </html>
