--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
    
-    <div class="calculator">
-        <input type="number" id="display" readonly>
+    <div id="calculator">
+        <input id="display" readonly>
         <div id="keys">
             <button onclick="Display('+')">+</button>
             <button onclick="Display('7')">7</button>
@@ -27,8 +27,8 @@
             <button onclick="Display('/')">/</button>
             <button onclick="Display('0')">0</button>
             <button onclick="Display('.')">.</button>
-            <button onclick="calculate()">=</button>
-            <button onclick="clear()">C</button>
+            <button onclick="Calculate()">=</button>
+            <button onclick="Clear()">C</button>
         </div>
 
        
