--- a/login-page/index.html
+++ b/login-page/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Facebook Log in page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="hero">
-        <div class="txt">
+      <div>
+        <h3>facebook</h3>
+        <p>Facebook helps you connect and share with the people in your life</p>
 
-            <h3>facebook</h3>
-            <p>Facebook helps you connect and share with the people in your life</p>
-        </div>
-        <div class="container"></div>
-        <input type="text" placeholder="Email address or phone number">
-        <input type="text" placeholder="Password">
+        <input type="text" placeholder="Email address or phone number" />
+        <input type="text" placeholder="Password" />
         <button type="submit">Log In</button>
         <p><a>Forgotten Password</a></p>
-        <hr>
+        <hr />
         <button type="submit">Create New Account</button>
-
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
