--- a/login-page/index.html
+++ b/login-page/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="hero">
-      <div>
+    <div class="container">
+      <div class="left">
         <h3>facebook</h3>
         <p>Facebook helps you connect and share with the people in your life</p>
-
-        <input type="text" placeholder="Email address or phone number" />
-        <input type="text" placeholder="Password" />
-        <button type="submit">Log In</button>
-        <p><a>Forgotten Password</a></p>
-        <hr />
-        <button type="submit">Create New Account</button>
+      </div>
+      <div class="right">
+        <form action="">
+          <input type="text" placeholder="Email address or phone number" />
+          <input type="text" placeholder="Password" />
+          <button type="submit">Log In</button>
+          <p><a>Forgotten Password</a></p>
+          <hr />
+          <button type="submit">Create New Account</button>
+        </form>
       </div>
     </div>
   </body>
