--- a/login-page/index.html
+++ b/login-page/index.html
@@ -13,14 +13,14 @@
         <p>Facebook helps you connect and share with the people in your life</p>
       </div>
       <div class="right">
-       
+        <form action="">
           <input type="text" placeholder="Email address or phone number" />
           <input type="text" placeholder="Password" />
           <button type="submit">Log In</button>
           <p><a>Forgotten Password</a></p>
           <hr />
           <button type="submit">Create New Account</button>
-       
+        </form>
       </div>
     </div>
   </body>
