--- a/login-page/index.html
+++ b/login-page/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="left">
         <h3>facebook</h3>
-        <p>Facebook helps you connect and share with the people in your life</p>
+        <p>Connect with friends and the world around you on Facebook</p>
       </div>
       <div class="right">
         <form action="">
